--- a/pages/index copy.html
+++ b/pages/index copy.html
@@ -14,6 +14,9 @@
     <!-- google icon -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <!-- SWIPER -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -152,33 +155,14 @@
       <div class="d-flex align-items-center">
         <!-- Button trigger modal --> 
         <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn border border-secondary px-3 px-lg-4 py-2" style="border-radius: 16px;">登入/註冊</button>
-        <a class="" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-lg-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg></a>
-      </div>
-      <!-- s -->
-      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-  <div class="offcanvas-header">
-    
-    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body d-flex flex-column justify-content-between " >
-    <div>
-      <ul class="list-unstyled text-center">
-        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="service.html">服務方案</a></li>
-        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="about.html">關於職旅</a></li>
-        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="contact.html">聯絡我們</a></li>
-      </ul>
-    </div>
-    <div>
-      <a  data-bs-toggle="modal" data-bs-target="#exampleModal" class="bg-green text-black px-3 px-lg-4 py-2 text-decoration-none text-center d-block " style="border-radius: 16px; font-weight: 700; font-size: 20px; line-height: 1.2; display: block;">登入/註冊</a>
-    </div>
-  </div>
+        <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-md-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg>
       </div>
       <!-- Modal -->
        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-xl">
     <div class="modal-content" style="overflow: hidden;">
       <div class="modal-body d-flex  p-0">
-        <div class="d-none d-lg-block">
+        <div class="d-none d-md-block">
           <img src="/assets/images/2025-week6/about/login.png" alt="#" style=" max-width: 700px;">
         </div>
         <div class="p-5" style="width: 100%;">
@@ -264,8 +248,8 @@
               <a href="#" class="link-primary text-decoration-underline" data-bs-target="#exampleModal" data-bs-toggle="modal">直接登入</a>
             </p>
         </div>
-         <div class="d-none d-lg-block">
-          <img src="/assets/images/2025-week6/about/register.png" alt="#" style=" max-width:700px;" >
+         <div class="d-none d-md-block">
+          <img src="/assets/images/2025-week6/about/register.png" alt="#" style=" max-width:700px;">
         </div>
       </div>
     </div>
