--- a/pages/service.html
+++ b/pages/service.html
@@ -323,7 +323,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption1" name="cardSelect" value="card1" checked>
       <label for="cardOption1" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5 mb-4">
-        <div class="flex-grow-1 me-4">
+        <div class="flex-grow-1 me-4 p-12">
           <p class="text-primary mb-2">全面方案</p>
           <h4 class="fs-4 fw-bold mb-2">職涯轉型全程計畫</h4>
           <p class="mb-2">針對希望完全改變職業領域的資深專業人士。我們的專家團隊將協助您將過往經驗轉化為新領域的競爭優勢。</p>
@@ -370,7 +370,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption2" name="cardSelect" value="card2">
       <label for="cardOption2" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5 mb-4">
-        <div class="flex-grow-1 me-4">
+        <div class="flex-grow-1 me-4 p-12">
           <p class="text-primary mb-2">加速方案</p>
           <h4 class="fs-4 fw-bold mb-2">自由工作加速計畫</h4>
           <p class="mb-2">為已確定要轉型但需要全面規劃的專業人士設計。六次深度諮詢，從心態調整到實際操作，全方位為您的轉型做好準備。</p>
@@ -417,7 +417,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption3" name="cardSelect" value="card3">
       <label for="cardOption3" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5">
-        <div class="flex-grow-1 me-4">
+        <div class="flex-grow-1 me-4 p-12">
           <p class="text-primary mb-2">遊牧方案</p>
           <h4 class="fs-4 fw-bold mb-2">數位遊牧生活計畫</h4>
           <p class="mb-2">針對希望完全改變職業領域的資深專業人士。我們的專家團隊將協助您將過往經驗轉化為新領域的競爭優勢。</p>
