--- a/service.html
+++ b/service.html
@@ -199,15 +199,15 @@ input[type="radio"]:checked {
           <img src="/htmlweek6/assets/avatar-QGHQ479s.png" alt="#" class="rounded-circle" style="max-width:44px;" >
           <span class="d-none d-lg-block ms-2">Mokumaru</span>
         </a>
-         <a class="" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-lg-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg></a>
-       </div>
+        <a class="" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-lg-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg></a>
+     </div>
        <!-- s -->
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
   <div class="offcanvas-header">
     
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body d-flex flex-column justify-content-between " >
+  <div class="offcanvas-body d-flex flex-column justify-content-between  align-items-center" >
     <div>
       <ul class="list-unstyled text-center">
         <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="service.html">服務方案</a></li>
@@ -216,7 +216,7 @@ input[type="radio"]:checked {
       </ul>
     </div>
     <div>
-      <a  data-bs-toggle="modal" data-bs-target="#exampleModal" class="bg-green text-black px-3 px-lg-4 py-2 text-decoration-none text-center d-block " style="border-radius: 16px; font-weight: 700; font-size: 20px; line-height: 1.2; display: block;">登入/註冊</a>
+      <a  data-bs-toggle="modal" data-bs-target="#exampleModal" class=" text-black px-3 px-lg-4 py-2 text-decoration-none text-center d-block " style="border-radius: 16px; font-weight: 700; font-size: 20px; line-height: 1.2; display: block;">登入/註冊</a>
     </div>
   </div>
       </div>
