--- a/pages/index.html
+++ b/pages/index.html
@@ -315,7 +315,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="1 / 6" >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-1.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -327,7 +327,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-2.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -339,7 +339,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-3.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">中年轉型的工程師</h3>
               <p class="mb-3">59 歲被裁員時，我以為職涯結束了。職旅顧問不只幫我轉職，更讓我相信自己還有價值。現在我每月穩定接案、收入翻倍。年齡不是限制，只是我還沒找到對的方向。</p>
               <div class="d-flex">
@@ -351,7 +351,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-4.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -363,7 +363,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-5.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -375,7 +375,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/assets/images/2025-week6/index/story-cover-6.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
