--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="1 / 6" >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-1-Bn7anPV1.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -329,7 +329,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-2-CWUZyQXo.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -341,7 +341,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-3-BUqkWZaw.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">中年轉型的工程師</h3>
               <p class="mb-3">59 歲被裁員時，我以為職涯結束了。職旅顧問不只幫我轉職，更讓我相信自己還有價值。現在我每月穩定接案、收入翻倍。年齡不是限制，只是我還沒找到對的方向。</p>
               <div class="d-flex">
@@ -353,7 +353,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-4-DDRMNC6y.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -365,7 +365,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-5-BO9rNF91.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -377,7 +377,7 @@
           </div>
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
             <div class="horn"><img src="/htmlweek6/assets/story-cover-6-DQ0Un_5J.png" class="mb-3 w-100" alt="圖片1"></div>
-            <div class="p-3 h-253">
+            <div class="p-3 ">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
